--- a/app/assets/stylesheets/themes/default.scss
+++ b/app/assets/stylesheets/themes/default.scss
@@ -24,7 +24,7 @@ $light-05-color: rgba(244, 247, 251, 0.05); // Unused
 // TeSS variables
 //////////////////////////////
 // Misc
-$layout-spacing-base: 24px;
+$layout-spacing-base: 30px;
 $item-padding-base: 24px;
 $sidebar-width: 280px;
 $transition-time: 300ms;
@@ -115,6 +115,8 @@ $breadcrumb-bg: transparent;
 $breadcrumb-separator: "/";
 $breadcrumb-color: $dark-color !default;
 $breadcrumb-active-color: $dark-color !default;
+$breadcrumb-padding-horizontal: 5px;
+$breadcrumb-padding-vertical: $layout-spacing-base / 2;
 
 // Pagination
 $pagination-color: $primary-color;
